Bug 276238 - text:soft-page-break not handled correctly in lists
Summary: text:soft-page-break not handled correctly in lists
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-22 06:43 UTC by T Zachmann
Modified: 2011-06-22 17:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
File showing the problem (18.97 KB, application/octet-stream)
2011-06-22 06:43 UTC, T Zachmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description T Zachmann 2011-06-22 06:43:52 UTC
Created attachment 61232 [details]
File showing the problem

Version:           unspecified
OS:                Linux

If there is a soft page break at the start of a list item the counter/bullet is put on the current page and the text is put on the next page.

Reproducible: Always



Expected Results:  
The text and the bullet should be moved to the next page.
Comment 1 T Zachmann 2011-06-22 17:09:23 UTC
Git commit 72f2be917836d90b9f7d51421edd22e21755715c by Thorsten Zachmann.
Committed on 22/06/2011 at 17:05.
Pushed by zachmann into branch 'master'.

Fix counter pos if there is a soft-page-break

Fixed bug 276238 - text:soft-page-break not handled correctly in lists
In case there is a text:soft-page-break after in a list:item the content of
the item was moved to the next page but the counter stayed on the current page.
Also the text was moved to the left due to the KoTextSoftPageBreak had a negative
width.

BUG: 276238

M  +1    -0    libs/kotext/KoInlineObject.h     
M  +2    -0    libs/kotext/KoTextSoftPageBreak.cpp     
M  +6    -0    libs/textlayout/KoTextLayoutArea.cpp     

http://commits.kde.org/calligra/72f2be917836d90b9f7d51421edd22e21755715c