Fix counter pos if there is a soft-page-break

Fixed bug 276238 - text:soft-page-break not handled correctly in lists
In case there is a text:soft-page-break after in a list:item the content of
the item was moved to the next page but the counter stayed on the current page.
Also the text was moved to the left due to the KoTextSoftPageBreak had a negative
width.

BUG: 276238