libs/kotext/KoTextSoftPageBreak.cpp
@@ -65,6 +65,8 @@ void KoTextSoftPageBreak::resize(const QTextDocument *document, QTextInlineObjec
     Q_UNUSED(posInDocument)
     Q_UNUSED(format)
     Q_UNUSED(pd)
+    // set the width to 0 as otherwise it is negative which results in the text being moved to left
+    object.setWidth(0);
 }
 
 void KoTextSoftPageBreak::paint(QPainter &painter, QPaintDevice *pd, const QTextDocument *document,
